# CertiForge

./: .gitignore  Cargo.toml  README.md
frontend/: .env.production  next.config.mjs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/add-text-to-image/: page.tsx
frontend/app/analyze-png/: page.tsx
frontend/app/create-sample-csv/: page.tsx
frontend/app/debug-csv/: page.tsx
frontend/app/debug-fonts/: page.tsx
frontend/app/debug-template/: page.tsx
frontend/app/file-organization-tips/: page.tsx
frontend/app/generate-from-csv/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: app-header.tsx  app-sidebar.tsx  csv-upload.tsx  dashboard-shell.tsx  font-upload.tsx  image-upload.tsx  png-analyzer.tsx  preview-canvas.tsx  recent-activity.tsx  stats-cards.tsx  template-analyzer.tsx  template-picker.tsx  text-controls.tsx  welcome-card.tsx
frontend/lib/: api-client.ts
src/: analysis.rs  api.rs  csvexcelparser.rs  editpng.rs  main.rs
