[package]
name = "CertificateMaker"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.24"
png = "0.17"
anyhow = "1.0"
imageproc = "0.23"
rusttype = "0.9"
csv = "1.3"
calamine = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
actix-web = "4"
actix-multipart = "0.7"
actix-cors = "0.7"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
zip = "2.0"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }